fix(select): increase z-index of select dropdown

--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -1,3 +1,3 @@
 .c-select__menu {
-	z-index: 3; // Ensure select dropdown opens above rich text editor
+	z-index: 12;
 }
